[gd_scene load_steps=4 format=3 uid="uid://bbwlqef08rqh3"]

[ext_resource type="Texture2D" uid="uid://cujkliypcwsp" path="res://assets/NinjaAdventure(SupporterEdition)/HUD/NinePathRect/DialogueBubble.png" id="1_mpsfw"]
[ext_resource type="Script" path="res://scripts/inventory/inventory.gd" id="2_6ygkf"]
[ext_resource type="PackedScene" uid="uid://l1bom2ftyko" path="res://scenes/inventory/drop_box.tscn" id="4_3gjj5"]

[node name="Inventory" type="NinePatchRect"]
custom_minimum_size = Vector2(0, 36)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.0
offset_right = 56.0
offset_bottom = 36.0
grow_horizontal = 2
mouse_filter = 1
texture = ExtResource("1_mpsfw")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource("2_6ygkf")

[node name="SlotContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 8.0
offset_right = -9.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="DropBox" parent="." instance=ExtResource("4_3gjj5")]
layout_mode = 0
offset_left = 138.0
offset_top = 19.0
offset_right = 202.0
offset_bottom = 78.0

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
